<resources>
    <string name="app_name">Only Chat</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="not_a_user_yet">Not a user yet?</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username">Username</string>
    <string name="full_name">Full name</string>
    <string name="upload_a_profile_picture">Upload a profile picture</string>
    <string name="choose">Choose</string>
    <string name="upload">Upload</string>
    <string name="image_path_here">image path here</string>
    <string name="i_accept_the_terms_of_only_chat">I accept the terms of Only Chat</string>
    <string name="sign_out">Sign out</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="type_username_here">type username here</string>
    <string name="start_chatting">Start chatting</string>
    <string name="settings">Settings</string>
    <string name="my_profile">My profile</string>
    <string name="change_color">Change color</string>
    <string name="view_profile">View profile</string>
</resources>
