<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:background="@color/whitey_grey"
    tools:context="apps.ahqmrf.onlychat.activity.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@null"
            android:textSize="14sp"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"
            android:textSize="14sp"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/confirm_password" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"
            android:textSize="14sp"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/username" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:textCursorDrawable="@null"
            android:inputType="text"
            android:textSize="14sp"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/full_name" />

        <EditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:textCursorDrawable="@null"
            android:inputType="text"
            android:textSize="14sp"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/upload_a_profile_picture" />

        <TextView
            android:id="@+id/tv_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:maxLines="1"
            android:visibility="gone"
            android:text="@string/image_path_here" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_choose"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:textSize="14sp"
                android:text="@string/choose"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_upload"
                android:layout_margin="5dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:textSize="14sp"
                android:text="@string/upload"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:textSize="14sp"
                android:text="@string/i_accept_the_terms_of_only_chat" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:textSize="14sp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

</ScrollView>
