<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/whitey_grey"
    tools:context="apps.ahqmrf.onlychat.activity.SignInActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:padding="10dp"
        android:text="@string/username" />

    <EditText
        android:id="@+id/et_email_or_username"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/white"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:padding="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:padding="10dp"
        android:text="@string/password" />


    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/white"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:padding="10dp" />


    <Button
        android:id="@+id/btn_signin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:text="@string/sign_in"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="20dp"
            android:background="@color/blue_grey"/>

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@color/whitey_grey"
            android:padding="10dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textSize="14sp"
            android:text="@string/not_a_user_yet"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />


        <Button
            android:id="@+id/btn_signup"
            android:layout_below="@id/tv"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:textSize="14sp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>



</LinearLayout>
